added & styled salamander watch page

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				</div>
 				<h3>Leaf Drop</h3>
 				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
-				<a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a>
+				<!-- <a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -195,7 +195,7 @@
 				</div>
 				<h3>Bud Burst</h3>
 				<p>The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.</p>
-				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/bud-burst" role="button">Learn More</a> -->
+				<!-- <a class="btn btn-primary" href="/bud-burst-static.html" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -203,7 +203,7 @@
 				</div>
 				<h3>Salamander Watch</h3>
 				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).</p>
-				<a class="btn btn-primary" href="/investigations/hampshire-apps/salamander-watch" role="button">Learn More</a>
+				<a class="btn btn-primary" href="/salamander-watch-static.html" role="button">Learn More</a>
 			</div>
 		</div>
 		<div class="row top-buffer">
@@ -213,7 +213,7 @@
 				</div>
 				<h3>Neighborhood Nestwatch</h3>
 				<p>Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.</p>
-		  		<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/neighborhood-nestwatch" role="button">Learn More</a> -->
+		  		<!-- <a class="btn btn-primary" href="/neighbourhood-nestwatch-static.html" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -221,7 +221,7 @@
 				</div>
 				<h3>Firefly Watch</h3>
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
-		  <!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/firefly-watch" role="button">Learn More</a> -->
+		  <!-- <a class="btn btn-primary" href="/firefly-watch-static.html" role="button">Learn More</a> -->
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -229,7 +229,7 @@
 				</div>
 				<h3>Monarch Butterflies</h3>
 				<p class="text-danger">Small batch wayfarers kale chips slow-carb PBR&B Godard keffiyeh High Life blog. Austin 90's master cleanse, normcore artisan post-ironic swag ennui cardigan single-origin coffee church-key salvia beard kogi quinoa. McSweeney's you probably haven't heard of them hashtag, Williamsburg mumblecore messenger bag chillwave Carles. Pork belly Tonx actually fixie fap fashion axe, fanny pack freegan.</p>
-				<!-- <a class="btn btn-primary" href="/investigations/hampshire-apps/monarch-butterflies" role="button">Learn More</a> -->
+				<!-- <a class="btn btn-primary" href="/monarch-butterflies-static.html" role="button">Learn More</a> -->
 			</div>
 		</div>
 	</section>
