--- a/salamander-watch-static.html
+++ b/salamander-watch-static.html
@@ -19,21 +19,23 @@
 	<script type="text/javascript" src="js/app.js"></script>
 </head>
 
-<body class="projects" id="leaf-drop">
+<body class="projects" id="salamander-watch">
 
 	<header class="container-fluid"></header>
 	<div class="container-fluid">
-		<h2>Leaf Drop</h2>
+		<h2>Salamander Watch</h2>
 		<div class="row">
 			<section class="col-xs-12 col-sm-8">
 				<h3>Project Overview</h3>
-				<p>This is a description of Leaf Drop and how it works Vegan Truffaut scenester Godard direct trade, master cleanse tousled normcore dreamcatcher single-origin coffee. Godard pickled literally PBR&B narwhal. You probably haven't heard of them banjo next level locavore Tonx four loko. Raw denim slow-carb plaid Odd Future lomo Helvetica.</p>
-				<p>Kogi crucifix next level, whatever keffiyeh authentic cardigan Vice Banksy disrupt PBR&B Pinterest you probably haven't heard of them biodiesel. Banjo biodiesel jean shorts Brooklyn, dreamcatcher fashion axe Odd Future mlkshk brunch scenester. High Life authentic try-hard twee aesthetic small batch Portland, dreamcatcher meh single-origin coffee kale chips whatever synth Shoreditch. Hashtag Tumblr Truffaut, kale chips twee irony before they sold out meggings Helvetica skateboard asymmetrical. Tattooed distillery PBR&B, biodiesel fashion axe mixtape actually direct trade. Swag blog occupy tousled bespoke. Vegan trust fund banh mi cornhole, Wes Anderson cray sustainable single-origin coffee VHS sriracha wolf Godard.</p>
+				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).</p>
+				<h3 class="subsequent-heading">Spotted Salamander Basics</h3>
+				<p>Adult spotted salamanders are 15-25 cm in total length, and females tend to be larger than males. Compared to other salamanders, the body is stout with a broadly rounded snout. The sides of the head are often swollen at the back of the jaw. The legs are large and strong with four to five toes. (Petranka, 1998) When they leave their ponds, spotted salamanders are black, dark brown, or dark grey on their backs...</p>
+				<a class="btn btn-primary" href="http://en.wikipedia.org/wiki/Spotted_salamander" target="_blank">Read More</a>
 			</section>
 			<aside class="col-xs-12 col-sm-4">
-				<h3>Leaf Drop Expeditions</h3>
+				<h3>Salamander Watch Expeditions</h3>
 				<p>Odd Future Godard fashion axe scenester. 90's, art party Austin sartorial, letterpress artisan Blue Bottle paleo Thundercats YOLO flannel vegan church-key direct trade chillwave. Literally cornhole pork belly, synth Thundercats fingerstache try-hard VHS McSweeney's. XOXO wolf literally slow-carb church-key deep.</p>
-				<a class="btn btn-primary" href="/investigations/leaf-drop">Launch the App</a>
+				<!-- <a class="btn btn-primary" href="">No Current Expeditions</a> -->
 			</aside>
 		</div>
 	</div>
