fixed return to top button at desktop size

--- a/salamander-watch-static.html
+++ b/salamander-watch-static.html
@@ -42,7 +42,7 @@
 
 	<!-- environmental issues -->
 	<section class="container-fluid" id="environment">
-		<h3>Environmental Issues</h3>
+		<h3>Environmental Issues Affecting Salamanders</h3>
 		<div class="row issues">
 			<div class="col-xs-8 col-sm-2 col-sm-offset-2">
 				<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
