--- a/leaf-drop-static.html
+++ b/leaf-drop-static.html
@@ -40,7 +40,7 @@
 
 	<!-- environmental issues -->
 	<section class="container-fluid" id="environment">
-		<h3>Environmental Issues</h3>
+		<h3>Environmental Issues Affecting Deciduous Trees</h3>
 		<div class="row issues">
 			<div class="col-xs-8 col-sm-2 col-sm-offset-2">
 				<a class="thumbnail" data-target="#biodiversity-icon" data-toggle="modal" href="#">
