hid leaf drop launch app button

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				</div>
 				<h3>Leaf Drop</h3>
 				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
-				<!-- <a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a> -->
+				<a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
