--- a/leaf-drop-static.html
+++ b/leaf-drop-static.html
@@ -33,7 +33,7 @@
 			<aside class="col-xs-12 col-sm-4">
 				<h3>Leaf Drop Expeditions</h3>
 				<p>Odd Future Godard fashion axe scenester. 90's, art party Austin sartorial, letterpress artisan Blue Bottle paleo Thundercats YOLO flannel vegan church-key direct trade chillwave. Literally cornhole pork belly, synth Thundercats fingerstache try-hard VHS McSweeney's. XOXO wolf literally slow-carb church-key deep.</p>
-				<a class="btn btn-primary" href="/investigations/leaf-drop">Launch the App</a>
+				<!-- <a class="btn btn-primary" href="/investigations/leaf-drop">Launch the App</a> -->
 			</aside>
 		</div>
 	</div>
