--- a/salamander-watch-static.html
+++ b/salamander-watch-static.html
@@ -13,6 +13,9 @@
 
 	<link href="../css/styles.css" rel="stylesheet">
 
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
 	<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
