changed user login section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 	<section class="container-fluid" id="login">
 		<form role="form">
 			<div class="col-xs-12 col-sm-6">
-				<h2 class="users">New Users</h2>
+				<h2 class="users">New Citizen Scientists</h2>
 				<button type="submit" class="btn btn-primary">Join PVCS</button>
 			</div>
 			<div class="col-xs-12 col-sm-6">
-				<h2 class="users">Existing Users</h2>
+				<h2 class="users">Existing Citizen Scientists</h2>
 				<div class="form-group">
 					<input type="email" class="form-control" id="inputEmail" placeholder="email address">
 				</div>
