added icons to salamander page

--- a/salamander-watch-static.html
+++ b/salamander-watch-static.html
@@ -37,8 +37,20 @@
 			</section>
 			<aside class="col-xs-12 col-sm-4">
 				<h3>Salamander Watch Expeditions</h3>
-				<p>Odd Future Godard fashion axe scenester. 90's, art party Austin sartorial, letterpress artisan Blue Bottle paleo Thundercats YOLO flannel vegan church-key direct trade chillwave. Literally cornhole pork belly, synth Thundercats fingerstache try-hard VHS McSweeney's. XOXO wolf literally slow-carb church-key deep.</p>
+				<!-- <p>Odd Future Godard fashion axe scenester. 90's, art party Austin sartorial, letterpress artisan Blue Bottle paleo Thundercats YOLO flannel vegan church-key direct trade chillwave. Literally cornhole pork belly, synth Thundercats fingerstache try-hard VHS McSweeney's. XOXO wolf literally slow-carb church-key deep.</p> -->
 				<!-- <a class="btn btn-primary" href="">No Current Expeditions</a> -->
+				<div class="row">
+					<div class="col-xs-12 col-sm-6">
+						<a class="thumbnail" href="#">
+							<img alt="Launch an investigation" class="img-responsive" src="/images/launch_investigation.png"/>
+						</a>
+					</div>
+					<div class="col-xs-12 col-sm-6">
+						<a class="thumbnail" href="#">
+							<img alt="Launch an investigation" class="img-responsive" src="/images/explore_data.png"/>
+						</a>
+					</div>
+				</div>
 			</aside>
 		</div>
 	</div>
