--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					<img alt="Leaves on a branch" class="img-responsive" src="/images/icon_leafdrop.png"/>
 				</div>
 				<h3>Leaf Drop</h3>
-				<p class="text-danger">Echo Park Tonx sriracha, Truffaut tofu food truck paleo semiotics Marfa distillery small batch church-key 8-bit beard single-origin coffee. Jean shorts stumptown organic kitsch Pitchfork cred. Roof party meh ethical, readymade letterpress skateboard viral XOXO tofu distillery quinoa Austin single-origin coffee Echo Park mumblecore.</p>
+				<p>The Leaf Drop project, adapted from an existing Forest Schoolyard Ecology Buds, Leaves, and Global Warming project, takes place in the Fall. In this multi week project Citizen Scientists record the changes in leaf color of trees to gain an understanding of the end of growing season in their local context.</p>
 				<a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
@@ -205,7 +205,7 @@
 					<img alt="Spotted salamander" class="img-responsive" src="/images/icon_salamanderwatch.png"/>
 				</div>
 				<h3>Salamander Watch</h3>
-				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).</p>
+				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night”, a counting of spotted salamanders during the early spring mating migration, and the Egg Mass Count, which is used to get a better estimate of the breeding success and overall health of the population.</p>
 				<a class="btn btn-primary" href="/salamander-watch-static.html" role="button">Learn More</a>
 			</div>
 		</div>
@@ -215,7 +215,7 @@
 					<img alt="Nest containing three eggs" class="img-responsive" src="/images/icon_nestwatch.png"/>
 				</div>
 				<h3>Neighborhood Nestwatch</h3>
-				<p>Modeled after the successful Smithsonian project of the same name in the Washington, D.C. area, Neighborhood Nestwatch seeks to engage ordinary citizens from Western Massachusetts in gathering data to discover precisely how urban sprawl impacts songbird populations. Assisted by trained scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites. The organizers of Neighborhood Nestwatch hope to compare a number of variables, including survival rates and site fidelity, between birds nesting in human-populated areas and those in forest or wildlands.</p>
+				<p>Modeled after a Smithsonian project in the Washington, D.C. area, Neighborhood Nestwatch engages citizen scientists from Western Massachusetts in gathering data to discover how urban sprawl impacts songbird populations. Assisted by scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites.</p>
 		  		<a class="btn btn-primary" href="/neighbourhood-nestwatch-static.html" role="button">Learn More</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
