added text to monarch project

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<img alt="A monarch butterfly" class="img-responsive" src="/images/icon_monarch.png"/>
 				</div>
 				<h3>Monarch Butterflies</h3>
-				<p class="text-danger">Small batch wayfarers kale chips slow-carb PBR&B Godard keffiyeh High Life blog. Austin 90's master cleanse, normcore artisan post-ironic swag ennui cardigan single-origin coffee church-key salvia beard kogi quinoa. McSweeney's you probably haven't heard of them hashtag, Williamsburg mumblecore messenger bag chillwave Carles. Pork belly Tonx actually fixie fap fashion axe, fanny pack freegan.</p>
+				<p>Monarch Butterflies Watch project engages citizen scientists in collecting data on Monarch butterflies in the Fall as they migrate to Mexico.  Future iterations of this project may involve tracking Monarch's migration from Mexico..</p>
 				<a class="btn btn-primary" href="/monarch-butterflies-static.html" role="button">Learn More</a>
 			</div>
 		</div>
