--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
 		</div>
 	</section>
 	<footer>
+		<img class="nsf-logo pull-left" src="images/nsf1.jpg" alt="NSF Logo">
 		<a class="btn btn-primary btn-top pull-right" href="#top"><span></span>Return To Top</a>
 	</footer>
 </body>
