adding text to footer

--- a/index.html
+++ b/index.html
@@ -467,7 +467,10 @@
 	</section>
 	<footer>
 		<img class="nsf-logo pull-left" src="images/nsf1.jpg" alt="NSF Logo">
+		<p class="pull-left col-xs-8 col-sm-6">This project is supported by a grant from the National Science Foundation</p>
 		<a class="btn btn-primary btn-top pull-right" href="#top"><span></span>Return To Top</a>
 	</footer>
 </body>
 </html>
+
+<!-- col-xs-2 col-sm-6 -->
