--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 				<h3>Leaf Drop</h3>
 				<p>The Leaf Drop project, adapted from an existing Forest Schoolyard Ecology Buds, Leaves, and Global Warming project, takes place in the Fall. In this multi week project Citizen Scientists record the changes in leaf color of trees to gain an understanding of the end of growing season in their local context.</p>
 				<a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary pull-right" href="#" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -199,6 +200,7 @@
 				<h3>Bud Burst</h3>
 				<p>The Bud Burst project is a national citizen science project that seeks to learn more about how plants respond to changes in climate locally, regionally, and nationally. Participants report on appearances of plants, either tracking the progress of a single plant over the course of a year or once.</p>
 				<a class="btn btn-primary" href="/bud-burst-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -207,6 +209,7 @@
 				<h3>Salamander Watch</h3>
 				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night”, a counting of spotted salamanders during the early spring mating migration, and the Egg Mass Count, which is used to get a better estimate of the breeding success and overall health of the population.</p>
 				<a class="btn btn-primary" href="/salamander-watch-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 		</div>
 		<div class="row top-buffer">
@@ -217,6 +220,7 @@
 				<h3>Neighborhood Nestwatch</h3>
 				<p>Modeled after a Smithsonian project in the Washington, D.C. area, Neighborhood Nestwatch engages citizen scientists from Western Massachusetts in gathering data to discover how urban sprawl impacts songbird populations. Assisted by scientists, participants learn how to locate nests in their backyards and count the eggs or recently-hatched birds within. In addition, the experts apply bands to adult birds so that the citizen scientists can track the birds' year-to-year returns to their nesting sites.</p>
 		  		<a class="btn btn-primary" href="/neighbourhood-nestwatch-static.html" role="button">Learn More</a>
+		  		<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -224,7 +228,8 @@
 				</div>
 				<h3>Firefly Watch</h3>
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
-		  <a class="btn btn-primary" href="/firefly-watch-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary" href="/firefly-watch-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
@@ -233,6 +238,7 @@
 				<h3>Monarch Butterflies</h3>
 				<p>Monarch Butterflies Watch project engages citizen scientists in collecting data on Monarch butterflies in the Fall as they migrate to Mexico.  Future iterations of this project may involve tracking Monarch's migration from Mexico..</p>
 				<a class="btn btn-primary" href="/monarch-butterflies-static.html" role="button">Learn More</a>
+				<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 		</div>
 	</section>
