moved button back

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				<h3>Leaf Drop</h3>
 				<p>The Leaf Drop project, adapted from an existing Forest Schoolyard Ecology Buds, Leaves, and Global Warming project, takes place in the Fall. In this multi week project Citizen Scientists record the changes in leaf color of trees to gain an understanding of the end of growing season in their local context.</p>
 				<a class="btn btn-primary" href="/leaf-drop-static.html" role="button">Learn More</a>
-				<a class="btn btn-primary pull-right" href="#" role="button">Launch App</a>
+				<a class="btn btn-primary" href="#" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
