added nav bar with 6 links at the very top

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 </head>
 
 <body>
+	<nav class="nav">
+		<li><a href="https://www.google.com">Link 1</a></li>
+		<li><a href="http://www.wikipedia.org/">Link 2</a></li>
+		<li><a href="http://www.amazon.com/">Link 3</a></li>
+		<li><a href="http://www.ebay.com/">Link 4</a></li>
+		<li><a href="http://www.timhortons.com/">Link 5</a></li>
+		<li><a href="https://usepanda.com/app/#/">Link 6</a></li>
+	</nav>
 
 	<div class="jumbotron" id="top">
 		<div class="container">
