salamanders going live for testing

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 </head>
 
 <body>
-	<nav class="nav">
+<!-- 	<nav class="nav">
 		<li><a href="https://www.google.com">Link 1</a></li>
 		<li><a href="http://www.wikipedia.org/">Link 2</a></li>
 		<li><a href="http://www.amazon.com/">Link 3</a></li>
 		<li><a href="http://www.ebay.com/">Link 4</a></li>
 		<li><a href="http://www.timhortons.com/">Link 5</a></li>
 		<li><a href="https://usepanda.com/app/#/">Link 6</a></li>
-	</nav>
+	</nav> -->
 
 	<div class="jumbotron" id="top">
 		<div class="container">
@@ -217,7 +217,7 @@
 				<h3>Salamander Watch</h3>
 				<p>Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night”, a counting of spotted salamanders during the early spring mating migration, and the Egg Mass Count, which is used to get a better estimate of the breeding success and overall health of the population.</p>
 				<a class="btn btn-primary" href="/salamander-watch-static.html" role="button">Learn More</a>
-				<a class="btn btn-primary" href="#" role="button">Launch App</a>
+				<a class="btn btn-primary" href="/investigations/salamander-watch/" role="button">Launch App</a>
 			</div>
 		</div>
 		<div class="row top-buffer">
