--- a/salamander-watch-static.html
+++ b/salamander-watch-static.html
@@ -41,7 +41,7 @@
 				<!-- <a class="btn btn-primary" href="">No Current Expeditions</a> -->
 				<div class="row">
 					<div class="col-xs-12 col-sm-6">
-						<a class="thumbnail" href="#">
+						<a class="thumbnail" href="/investigations/salamander-watch/">
 							<img alt="Launch an investigation" class="img-responsive" src="/images/launch_investigation.png"/>
 						</a>
 					</div>
