Added link to firefly App

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				<h3>Firefly Watch</h3>
 				<p>The Boston Museum of Science's Firefly Watch project seeks to learn more about the geographic distribution and activities of fireflies during the summer. It also seeks to discover more about the effects of man-made light and pesticides on fireflies. Participants go out into their backyards or nearby fields one night a week and fill out an observation sheet with information on the weather conditions that night and the behavior of the fireflies that they see.</p>
 				<a class="btn btn-primary" href="/firefly-watch-static.html" role="button">Learn More</a>
-				<a class="btn btn-primary" href="#" role="button">Launch App</a>
+				<a class="btn btn-primary" href="/investigations/firefly" role="button">Launch App</a>
 			</div>
 			<div class="col-xs-12 col-sm-4 top-buffer">
 				<div class="thumbnail">
